--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -42,3 +42,8 @@ jobs:
 
       - name: Check for circular dependencies
         run: npx madge --circular . --extensions ts,js
+
+      - name: Run FOSSA scan and upload build data
+        uses: fossa-contrib/fossa-action@v1
+        with:
+          fossa-api-key: ${{ secrets.FOSSA_API_KEY }}
