--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "sandcastle-sdk",
   "version": "0.3.1",
-  "description": "Sandcastle SDK for JavaScript",
+  "description": "Auth0 FGA SDK for JavaScript",
   "author": "Auth0Lab",
   "keywords": [
     "authorization",
     "fga",
     "fine-grained-authorization",
+    "auth0-fga",
+    "auth0-fine-grained-authorization",
+    "auth0-fga-api-client",
     "sandcastle",
-    "sandcastle-sdk",
-    "sandcastle-api-client",
     "zanzibar"
   ],
   "license": "MIT",
@@ -21,16 +22,16 @@
     "test": "jest --config ./tests/jest.config.js"
   },
   "dependencies": {
-    "axios": "^0.21.4"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.6",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.11",
     "axios-mock-adapter": "^1.20.0",
-    "jest": "^27.2.1",
-    "nock": "^13.1.3",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "jest": "^27.4.2",
+    "nock": "^13.2.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   },
   "files": [
     "README.md",
@@ -40,10 +41,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com:auth0-lab/sandcastle-js-sdk.git"
+    "url": "git://github.com:auth0-lab/auth0-fga-js-sdk.git"
   },
   "bugs": {
-    "url": "https://github.com/auth0-lab/sandcastle-js-sdk/issues"
+    "url": "https://github.com/auth0-lab/auth0-fga-js-sdk/issues"
   },
-  "homepage": "https://github.com/auth0-lab/sandcastle-js-sdk#readme"
+  "homepage": "https://github.com/auth0-lab/auth0-fga-js-sdk#readme"
 }
