--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sandcastle-sdk",
+  "name": "@auth0/fga",
   "version": "0.4.0",
   "description": "Auth0 FGA SDK for JavaScript",
   "author": "Auth0Lab",
@@ -41,10 +41,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com:auth0-lab/auth0-fga-js-sdk.git"
+    "url": "git://github.com:auth0-lab/fga-js-sdk.git"
   },
   "bugs": {
-    "url": "https://github.com/auth0-lab/auth0-fga-js-sdk/issues"
+    "url": "https://github.com/auth0-lab/fga-js-sdk/issues"
   },
-  "homepage": "https://github.com/auth0-lab/auth0-fga-js-sdk#readme"
+  "homepage": "https://github.com/auth0-lab/fga-js-sdk#readme"
 }
