chore(deps): set axios -> follow-redirects to 1.14.8
rel: https://security.snyk.io/vuln/SNYK-JS-FOLLOWREDIRECTS-2396346

--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "url": "https://github.com/auth0-lab/fga-js-sdk/issues"
   },
   "homepage": "https://github.com/auth0-lab/fga-js-sdk#readme",
+  "overrides": {
+    "axios": {
+      "follow-redirects": "1.14.8"
+    }
+  },
   "publishConfig": {
     "access": "public"
   }
