--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Set up node
         uses: actions/setup-node@v2
+        with:
           node-version: '16'
           cache: 'npm'
 
