--- a/package.json
+++ b/package.json
@@ -17,23 +17,25 @@
   "scripts": {
     "build": "tsc --outDir dist/",
     "prepublishOnly": "rm -rf dist/ && npm run build",
-    "test": "jest --config ./tests/jest.config.js",
-    "lint": "eslint . --ext .ts",
+    "test": "npx jest --config ./tests/jest.config.js",
+    "lint": "npx eslint . --ext .ts",
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@openfga/sdk": "^0.1.0",
     "axios": "^0.27.2"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
-    "@types/node": "^16.11.38",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
-    "eslint": "^8.17.0",
-    "jest": "^28.1.1",
-    "nock": "^13.2.6",
-    "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3"
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.1.2",
+    "nock": "^13.2.9",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "files": [
     "README.md",
@@ -49,11 +51,6 @@
     "url": "https://github.com/auth0-lab/fga-js-sdk/issues"
   },
   "homepage": "https://github.com/auth0-lab/fga-js-sdk#readme",
-  "overrides": {
-    "axios": {
-      "follow-redirects": "1.14.8"
-    }
-  },
   "publishConfig": {
     "access": "public"
   }
