--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@auth0/fga",
-  "version": "0.7.0",
+  "version": "0.8.0-alpha",
   "description": "JavaScript and Node.js SDK for Auth0 Fine Grained Authorization (FGA)",
   "author": "Auth0 FGA",
   "keywords": [
