--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@auth0/fga",
-  "version": "0.8.0-alpha",
+  "version": "0.8.0",
   "description": "JavaScript and Node.js SDK for Auth0 Fine Grained Authorization (FGA)",
   "author": "Auth0 FGA",
   "keywords": [
@@ -26,13 +26,13 @@
     "axios": "^0.27.2"
   },
   "devDependencies": {
-    "@types/jest": "^29.1.2",
-    "@types/node": "^18.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.1.2",
+    "jest": "^29.2.1",
     "nock": "^13.2.9",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
