--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@auth0/fga",
-  "version": "0.9.1",
-  "description": "JavaScript and Node.js SDK for Auth0 Fine Grained Authorization (FGA)",
-  "author": "Auth0 FGA",
+  "version": "0.10.0",
+  "description": "JavaScript and Node.js SDK for Okta Fine Grained Authorization (FGA)",
+  "author": "Okta FGA",
   "keywords": [
+    "okta-fga",
     "auth0-fga",
     "authorization",
     "fga",
@@ -15,27 +16,23 @@
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc --outDir dist/",
+    "build": "npx tsc --outDir dist/",
     "prepublishOnly": "rm -rf dist/ && npm run build",
     "test": "npx jest --config ./tests/jest.config.js",
+    "typecheck": "npx tsc  --skipLibCheck",
     "lint": "npx eslint . --ext .ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "format:check": "npx prettier --check **/*.ts",
+    "format:fix": "npx prettier --write **/*.ts"
   },
   "dependencies": {
-    "@openfga/sdk": "^0.2.2",
-    "axios": "^0.27.2"
+    "@openfga/sdk": "*"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.6",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "eslint": "^8.32.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.3.1",
-    "nock": "^13.3.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "jest": "^29.7.0",
+    "nock": "^13.5.3",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   },
   "files": [
     "README.md",
@@ -52,6 +49,7 @@
   },
   "homepage": "https://github.com/auth0-lab/fga-js-sdk#readme",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   }
 }
