--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@openfga/sdk": "*"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.20",
     "jest": "^29.7.0",
     "nock": "^13.5.3",
     "ts-jest": "^29.1.2",
@@ -48,6 +50,9 @@
     "url": "https://github.com/auth0-lab/fga-js-sdk/issues"
   },
   "homepage": "https://github.com/auth0-lab/fga-js-sdk#readme",
+  "engines": {
+    "node": ">=14.17.0"
+  },
   "publishConfig": {
     "access": "public",
     "provenance": true
